@@ -350,6 +350,53 @@ namespace SBXAThemeSupport.ViewModels
         }
 
         #endregion
+
+        /// <summary>
+        /// Doeses the run once exist.
+        /// </summary>
+        /// <param name="name">The name.</param>
+        /// <returns></returns>
+        public static bool DoesRunOnceExist(string name)
+        {
+            try
+            {
+                string logFolder = Path.Combine(Log.LOG_DIRECTORY, "Client");
+
+                var fileName = Path.Combine(logFolder, "RunOnce_" + name);
+
+                return (File.Exists(fileName));
+            }
+// ReSharper disable once EmptyGeneralCatchClause
+            catch (Exception)
+            {
+            }
+            return false;
+        }
+
+        /// <summary>
+        /// Haves the run once.
+        /// </summary>
+        /// <param name="name">The name.</param>
+        public static void HaveRunOnce(string name)
+        {
+            try
+            {
+                string logFolder = Path.Combine(Log.LOG_DIRECTORY, "Client");
+
+                if (!Directory.Exists(logFolder))
+                {
+                    Directory.CreateDirectory(logFolder);
+                }
+                var fileName = Path.Combine(logFolder, "RunOnce_" + name);
+
+                File.WriteAllText(fileName, name);
+            }
+// ReSharper disable once EmptyGeneralCatchClause
+            catch (Exception exception)
+            {
+            }
+
+        }
     }
 
     /// <summary>
