@@ -1,0 +1,15 @@
+﻿<UserControl x:Class="SBXAThemeSupport.Views.ProcessAnalysis"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             mc:Ignorable="d" 
+             d:DesignHeight="300" d:DesignWidth="300">
+    <Grid>
+        <TreeView Name="ProcessTree" 
+                          ItemsSource="{Binding ProcessStack}" 
+                          ItemTemplate="{DynamicResource ProcessTreeTemplate}"
+                          />
+
+    </Grid>
+</UserControl>
